--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Gochi+Hand|Permanent+Marker');
+@import url('https://fonts.googleapis.com/css?family=Gochi+Hand|Patrick+Hand');
 
 /******************************************************
 Document-Level Styles
@@ -6,50 +6,68 @@ Document-Level Styles
 
 body {
     color: rgb(37, 34, 34);
-    background-color: #bd872a;
-    background-image: url("https://www.transparenttextures.com/patterns/light-toast.png");
-    font-family: 'Gochi Hand', cursive;
+    background-color: #c28132;
+    background-image: url("https://www.transparenttextures.com/patterns/dirty-old-black-shirt.png");
+    font-family: 'Patrick Hand', cursive;
     font-size: 22px;
+    font-weight: bold;
 }
 
-h1,
+#title {
+    font-size: 40px;
+    font-family: Gochi Hand;
+    color: #bec0ba;
+    background-color: #0d0d14;
+    background-image: url("https://www.transparenttextures.com/patterns/paper-3.png");
+    max-width: 800px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border: 7px solid #db9c48;
+    transform: rotate(1deg);
+    margin: 0 auto;
+}
+
+h1 {
+    text-align: center;
+    color: #ffffff;
+}
+
 h2 {
+    font-family: Gochi Hand;
     font-size: 32px;
 }
 
-.container {
+.wrapper {
+    margin-right: 5%;
+    margin-left: 5%;
+    width: 90%;
+    text-align: center;
+}
+
+.flex-container {
     display: flex;
     flex-wrap: wrap;
 }
 
 .col {
-    width: 80%;
-    color: rgb(212, 203, 203);
-    background-color: #2b2013;
-    background-image: url("https://www.transparenttextures.com/patterns/notebook.png");
-    margin: 1% 2% 5% 1%;
+    max-width: 500px;
+    color: #eaeee2;
+    background-color: #0d0d14;
+    background-image: url("https://www.transparenttextures.com/patterns/paper-3.png");
+    margin: 5px 2% 35px 2%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    padding-left: 10%;
-    padding-right: 10%;
-}
-
-.btn {
-    color: white;
-    font-size: 16px;
-    background: rgb(54, 161, 211);
-    padding: 14px;
-    border: none;
-    margin-bottom: 10px;
+    padding: 5px 15px 5px 15px;
+    border: 7px solid #db9c48;
 }
 
 a {
-    color: rgb(54, 161, 211);
+    color: rgb(17, 68, 92);
     text-decoration: none;
 }
 
 a:hover {
-    color: rgb(10, 50, 68);
+    color: rgb(10, 112, 160);
 }
+
 
 /******************************************************
 Modal Styles
@@ -61,7 +79,8 @@ Modal Styles
     display: none;
     position: fixed;
     z-index: 1;
-    padding-top: 70px;
+    padding-top: 5px;
+    padding-bottom: 40px;
     left: 0;
     top: 0;
     width: 100%;
@@ -76,12 +95,12 @@ Modal Styles
 
 .modal-content {
     width: 90%;
-    height: 80%;
-    margin-right: 5%;
-    margin-left: 5%;
+    height: 90%;
+    margin: 5% 5% 5% 5%;
+    align-content: center;
     position: relative;
     border: 1px solid #888;
-    background-color: #2b2013;
+    background-color: #6e5638;
     background-image: url("https://www.transparenttextures.com/patterns/notebook.png");
     -webkit-animation-name: animatetop;
     -webkit-animation-duration: 0.4s;
@@ -93,6 +112,10 @@ Modal Styles
 .modal-image {
     max-width: 100%;
     height: auto;
+}
+
+.list {
+    align-content: center;
 }
 
 @-webkit-keyframes animatetop {
@@ -146,11 +169,31 @@ Modal Styles
 Section Styles & Animation
 *******************************************************/
 
+.right {
+    transform: rotate(1deg);
+}
+
+.left {
+    transform: rotate(-1deg);
+}
+
+.btn {
+    color: white;
+    font-size: 16px;
+    background: rgb(89, 95, 121);
+    border: 2px inherit antiquewhite;
+    padding: 14px;
+    border: none;
+    margin-bottom: 10px;
+}
+
+.btn:hover {
+    background: rgb(69, 82, 141);
+}
+
+
 @keyframes rotate-right-animator {
     0% {
-        transform: rotate(1deg);
-    }
-    50% {
         transform: rotate(2deg);
     }
     100% {
@@ -160,9 +203,6 @@ Section Styles & Animation
 
 @keyframes rotate-left-animator {
     0% {
-        transform: rotate(-1deg);
-    }
-    50% {
         transform: rotate(-2deg);
     }
     100% {
@@ -170,22 +210,39 @@ Section Styles & Animation
     }
 }
 
-.rotate-right {
+.right:hover {
     display: inline-block;
     padding-left: 15px;
     padding-right: 15px;
-    color: whitesmoke;
-    margin-top: 10px;
     animation: rotate-right-animator 2s;
     animation-fill-mode: forwards;
 }
 
-.rotate-left {
-    display: inline-block;
+.left:hover {
     padding-left: 15px;
     padding-right: 15px;
-    color: whitesmoke;
-    margin-top: 10px;
     animation: rotate-left-animator 2s;
     animation-fill-mode: forwards;
+}
+
+
+
+/******************************************************
+Responsive styles for larger screens
+*******************************************************/
+
+@media all and (max-width: 1500px) and (min-width: 950px) {
+    iframe {
+        width: 380px;
+        height: 225px;
+        padding-right: 20px;
+    }
+}
+
+@media all and (min-width: 1500px) {
+    iframe {
+        width: 700px;
+        height: 420px;
+        padding-right: 30px;
+    }
 }
